footer and lorem added

--- a/pages/index.html
+++ b/pages/index.html
@@ -9,5 +9,10 @@
 <body>
     <header>assiignmnet on  git</header>
     <div><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi a molestias labore facilis aliquid deleniti esse adipisci, exercitationem, laboriosam velit rerum illo aspernatur expedita necessitatibus, id maiores molestiae quod harum!</p></div>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit totam ad explicabo aliquam ducimus facilis recusandae minus excepturi ut? Omnis iusto esse sit impedit voluptate modi delectus iste? A, ratione!</p>
+    <footer>
+     <div><a href="">about</a></div>
+     
+    </footer>
 </body>
 </html>
