--- a/pages/index.html
+++ b/pages/index.html
@@ -12,7 +12,7 @@
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit totam ad explicabo aliquam ducimus facilis recusandae minus excepturi ut? Omnis iusto esse sit impedit voluptate modi delectus iste? A, ratione!</p>
     <footer>
      <div><a href="">about</a></div>
-     
+     <p> why didn't i see color change on the new added or changed statements<p>
     </footer>
 </body>
 </html>
