--- a/pages/index.html
+++ b/pages/index.html
@@ -10,6 +10,7 @@
     <header>assiignmnet on  git</header>
     <div><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi a molestias labore facilis aliquid deleniti esse adipisci, exercitationem, laboriosam velit rerum illo aspernatur expedita necessitatibus, id maiores molestiae quod harum!</p></div>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit totam ad explicabo aliquam ducimus facilis recusandae minus excepturi ut? Omnis iusto esse sit impedit voluptate modi delectus iste? A, ratione!</p>
+    <p>test document</p>
     <footer>
      <div><a href="">about</a></div>
      <p> why didn't i see color change on the new added or changed statements<p>
