css and js linked

--- a/pages/index.html
+++ b/pages/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Git practice</title>
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <h1> Git Practice document</h1>
@@ -16,5 +17,6 @@
      <div><a href="">about</a></div>
      <p> why didn't i see color change on the new added or changed statements<p>
     </footer>
+    <script src="../js/script.js"></script>
 </body>
 </html>
