--- a/pages/index.html
+++ b/pages/index.html
@@ -16,6 +16,11 @@
     <footer>
      <div><a href="">about</a></div>
      <p> why didn't i see color change on the new added or changed statements<p>
+        <div>
+            <p>
+                Meaza have got my repository
+            </p>
+        </div>
     </footer>
     <script src="../js/script.js"></script>
 </body>
