--- a/pages/index.html
+++ b/pages/index.html
@@ -20,6 +20,7 @@
             <p>
                 Meaza have got my repository
             </p>
+            <P> I added this for merge practice</p>
         </div>
     </footer>
     <script src="../js/script.js"></script>
