--- a/pages/index.html
+++ b/pages/index.html
@@ -20,6 +20,9 @@
             <p>
                 Meaza have got my repository
             </p>
+             <p>
+                Mommy has annoyed me
+            </p>
         </div>
     </footer>
     <script src="../js/script.js"></script>
