par added to annoy me

--- a/pages/index.html
+++ b/pages/index.html
@@ -23,6 +23,9 @@
              <p>
                 Mommy has annoyed me
             </p>
+            <p>
+                Mommy got it
+            </p>
         </div>
     </footer>
     <script src="../js/script.js"></script>
