--- a/pages/index.html
+++ b/pages/index.html
@@ -26,6 +26,9 @@
             <p>
                 Mommy got it
             </p>
+            <p>
+                Mommy are you sure
+            </p>
         </div>
     </footer>
     <script src="../js/script.js"></script>
