--- a/pages/index.html
+++ b/pages/index.html
@@ -26,6 +26,7 @@
             <p>
                 Mommy got it
             </p>
+            <p>yes I am sure</p>
         </div>
     </footer>
     <script src="../js/script.js"></script>
