--- a/pages/index.html
+++ b/pages/index.html
@@ -33,6 +33,8 @@
 
         </div>
     </footer>
+    <script src="../js/script2.js"></script>
+    <script src="../js/script3.js"></script>
     <script src="../js/script.js"></script>
 </body>
 </html>
